syntax = "proto3";

option go_package = "github.com/Ricardolv/commons/api";

package api;


message Order {
  string ID = 1;
  string customerID = 2;
  string Status = 3;
  repeated Items Items = 4;
}

service OrderService {
  rpc CreateOrder(CreateOderRequest) returns (Order);
}

message Items {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceID = 4;
}

message ItemsWithQuatity {
  string ID = 1;
  int32 Quantity = 2;
}

message CreateOderRequest {
  string customerID = 1;
  repeated ItemsWithQuatity Items = 2;
}